# Ulam-Spiral

./: .gitignore  flake.nix  pyproject.toml
src/: __main__.py
