[tool.poetry]
name = "ulam-spiral"
version = "0.1.0"
description = "Exercise on the Ulam Spiral."
authors = ["ElliottSullingeFarrall <elliott.chalford@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
snakeviz = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
